--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-    window.location.href="https://blog.csdn.net/weixin_43292457";
+    window.location.href="https://blog.csdn.net/qq_41622644";
 </script>
 
 <body>
