--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<script>
-    window.location.href="https://blog.csdn.net/qq_41622644";
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript">
+	window.location.href="http://47.100.16.32/HEHEheee";
 </script>
-
+</head>
 <body>
+	xushan
 </body>
-
 </html>
