--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>舟</title>
 <script type="text/javascript">
-	window.location.href="http://47.100.16.32/HEHEheee";
+	window.location.href="http://47.111.250.74:8080/bin/login/XWiki/XWikiLogin?srid=WPXAfTip&xredirect=%2Fbin%2Fview%2FMain%2F%3Fsrid%3DWPXAfTip";
 </script>
 </head>
 <body>
